--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
 @import 'Topbar.css';
 @import 'BackButton.css';
 @import 'typography.css';
+@import 'figure.css';
 @import 'HomePage/HomePage.css';
 @import 'skills/skills.css';
 @import 'quests/quests.css';
