--- a/src/figure.css
+++ b/src/figure.css
@@ -1,20 +1,8 @@
-#homework p {
-  font-size: 1.5rem;
-  line-height: 1.5;
-  margin: 0.5em;
-  padding: 0;
-}
-
-#homework b {
-  color: #cd24ff;
-}
-
-#homework figure:hover {
+.figure:hover {
   height: 100vh;
-  width: auto;
 }
 
-#homework figure {
+.figure {
   text-align: center;
   margin: 0;
   max-height: 100%;
@@ -27,12 +15,12 @@
   margin: 1em auto;
 }
 
-#homework figure img,
-#homework figure video {
+.figure img,
+.figure video {
   height: calc(100% - 4rem);
 }
 
-#homework figure figcaption {
+.figure figcaption {
   font-size: 1.5rem;
   margin-top: 1em;
   letter-spacing: 4px;
