--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,21 @@
 * {
   box-sizing: border-box;
 }
+
+.contentEl{
+  text-align: center;
+}
+
+
+
+.answerStatusEl{
+  margin-top: 20px;
+}
+.questionEl{
+  transition: background-color 5s;
+  background-color: transparent;
+}
+
+.true{
+  background-color: green;
+}
