create and use new Exam.css

--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,7 @@
 @import 'Lessons/SlidesV2/SlidesV2.css';
 @import 'Lessons/Lesson25/Lesson25.css';
 @import 'Exams/Exam1/Exam1.css';
+@import 'Exams/Exam2/Exam2.css';
 @import 'Raznoe/ExpectationReality/ExpectationReality.css';
 @import 'NeuralArt/NeuralArt.css';
 @import 'Resume/Resume.css';
