--- a/src/Exams/Exam2/Exam2.css
+++ b/src/Exams/Exam2/Exam2.css
@@ -1,15 +1,16 @@
 .exam2-content{
     text-align: center;
 }
-
-.answerStatusExam2El{
-    margin-top: 20px;
-}
-.questionElExam2{
+  
+.exam2-content .questionElExam2{
     transition: background-color 5s;
     background-color: transparent;
 }
 
-.exam2-correct-answer{
+.exam2-content .questionElExam2 .answerStatusExam2El{
+    margin-top: 20px;
+}
+
+.exam2-content .exam2-correct-answer{
     background-color: green;
 }
