--- a/src/Lessons/SlidesV2/SlidesV2.css
+++ b/src/Lessons/SlidesV2/SlidesV2.css
@@ -7,8 +7,7 @@
 }
 
 .lesson-sections {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  padding: 1em;
 }
 
 .lesson-sections section.pomodoro {
