--- a/src/Navbar/MenuIcon.css
+++ b/src/Navbar/MenuIcon.css
@@ -1,64 +1,149 @@
 /* CSS burger menu icon */
-/* https://codepen.io/Danilo06/pen/PoNNvGm */
+/* https://codepen.io/alvarotrigo/pen/QWqKOdb */
 
-#menu-icon {
-  width: 70px;
-  margin:0;
-  padding:0;
+/* hamburger */
+.checkbox {
+  display: none;
 }
 
-#menu-icon label {
-  display: flex;
-  flex-direction: column;
-  width: 70px;
+.button {
+  position: relative;
+  background-color: white;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 5vh; 
+  left: 5vw; 
+  z-index: 2000;
+  box-shadow: 0 1rem 3rem black;
+  text-align: center; 
   cursor: pointer;
 }
 
-#menu-icon label span {
-  background: #fff;
-  border-radius:10px;
-  height:7px;
-  margin: 7px 0;
-  transition: .4s  cubic-bezier(0.68, -0.6, 0.32, 1.6);
+.background {
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 5.5vh; 
+  left: 5.5vw; 
+  background-image: radial-gradient(green, black);
+  z-index: 1000;
 
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
 }
 
-
-#menu-icon span:nth-of-type(1){
-  width:50%;
-  
+.nav {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: -60vw;
+  z-index: 1500;
+  opacity: 0;
+  width: 0;
+  transition: all 0.8s;
 }
 
-#menu-icon span:nth-of-type(2){
-  width:100%;
+.list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+  width: 100%;
 }
 
-
-#menu-icon span:nth-of-type(3){
-  width:75%;
+.item {
+  margin: 1rem;
+  font-size: 36px;
 }
 
-
-#menu-icon input[type="checkbox"]{
-  display:none;
+.link:link,
+.link:visited {
+  display: inline-block;
+  font-size: 3rem;
+  font-weight: 300;
+  padding: 1rem 2rem;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    120deg,
+    transparent 0%,
+    transparent 50%,
+    white 50%
+  );
+  background-size: 220%;
+  transition: all 0.4s;
 }
 
-
-#menu-icon.open span:nth-of-type(1){
-  transform-origin:bottom;
-  transform:rotatez(45deg) translate(8px,0px)
+.link:hover,
+.link:active {
+  color: lightgreen;
+  cursor: pointer;
 }
 
-
-#menu-icon.open span:nth-of-type(2){
-  
-  transform-origin:top;
-  transform:rotatez(-45deg)
+/* functionality */
+.checkbox:checked ~ .background {
+  transform: scale(80);
+}
+.checkbox:checked ~ .nav {
+  opacity: 1;
+  width: 100%;
+  right: 0;
 }
 
+/*  */
+/* styling hamb ICON */
+.icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-#menu-icon.open span:nth-of-type(3){
-  transform-origin:bottom;
-  width:50%;
-  transform: translate(30px,-11px) rotatez(45deg);
+.icon,
+.icon::before,
+.icon::after {
+  width: 3rem;
+  height: 2px;
+  background-color: gray;
+  display: inline-block;
+}
+
+.icon::before,
+.icon::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  transition: all 0.2s;
+}
+
+.icon::before {
+  top: -0.8rem;
+}
+.icon::after {
+  top: 0.8rem;
+}
+
+.button:hover icon:before {
+  top: -1rem;
+}
+.button:hover icon::after {
+  top: 1rem;
+}
+
+.checkbox:checked + .button .icon {
+  background-color: transparent;
+}
+
+.checkbox:checked + .button .icon::before {
+  top: 0;
+  transform: rotate(135deg);
+}
+.checkbox:checked + .button .icon::after {
+  top: 0;
+  transform: rotate(-135deg);
 }
