--- a/src/HomePage/Students/StatsBarChart/StatsBarChart.css
+++ b/src/HomePage/Students/StatsBarChart/StatsBarChart.css
@@ -1,7 +1,15 @@
+.stats-bar-chart {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 .chart-bar {
   margin: 1em;
 }
 
 .chart-bar rect {
   fill: aqua;
+}
+
+.chart-bar text {
+  fill: #333;
 }
