Add experience history

--- a/src/HomePage/Students/StudentCard.css
+++ b/src/HomePage/Students/StudentCard.css
@@ -1,10 +1,11 @@
 @import './AddSkillForm.css';
+@import './ExperienceHistory.css';
 
 .student-card img {
   width: 200px;
 }
 
-.student-card {
+.student-card .avatar-row {
   display: flex;
   gap: 50px;
   position: relative;
