--- a/src/HomePage/Students/StatsBarChart/StatsBarChart.css
+++ b/src/HomePage/Students/StatsBarChart/StatsBarChart.css
@@ -1,13 +1,15 @@
 .stats-bar-chart {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 16px;
 }
 
-.chart-bar {
+.chart-bar.positive rect {
+  fill: green
 }
 
-.chart-bar rect {
-  fill: aqua;
+.chart-bar.negative {
+  fill: red
 }
 
 .chart-bar text {
