Improve 4lenomrka bar chart design

--- a/src/HomePage/Students/StatsBarChart/StatsBarChart.css
+++ b/src/HomePage/Students/StatsBarChart/StatsBarChart.css
@@ -1,7 +1,11 @@
 .stats-bar-chart {
+}
+
+.stats-bar-chart-row {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 16px;
+  align-items: center;
 }
 
 .chart-bar.positive rect {
