--- a/src/HomePage/Students/StudentCard.css
+++ b/src/HomePage/Students/StudentCard.css
@@ -3,6 +3,8 @@
 
 .student-card {
   position: relative;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
 }
 
 .student-card img {
@@ -12,4 +14,8 @@
 .student-card .avatar-row {
   display: flex;
   gap: 50px;
+}
+
+.show-experience-button {
+  font-size: 1rem;
 }
