--- a/src/HomePage/Students/StatsBarChart/StatsBarChart.css
+++ b/src/HomePage/Students/StatsBarChart/StatsBarChart.css
@@ -4,7 +4,7 @@
 
 .stats-bar-chart-row {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 40px 1fr 1fr;
   gap: 16px;
   align-items: center;
 }
