--- a/src/HomePage/Students/AddSkillForm.css
+++ b/src/HomePage/Students/AddSkillForm.css
@@ -1,11 +1,16 @@
 #add-skill-form {
   font-size: 1.2rem;
   position: absolute;
+  z-index: 1;
   top: 0; left: 0; bottom: 0; right: 0;
   background: rgba(0, 0, 0, 0.8);
   display: flex;
   flex-direction: column; 
   height: 100%;
+}
+
+#add-skill-form .submitted-by {
+  background: rgba(0, 0, 0, 0.8);
 }
 
 #add-skill-form button[type="submit"] {
