--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -4,8 +4,22 @@
 
 #home-page {
   box-sizing: border-box;
-  border: 40px solid transparent;
   font-size: 24px;
+  display: grid;
+  grid-template-rows: [top] 70px [center] auto [bottom] 70px;
+  grid-template-columns: [left] 160px [center] auto [right] 160px;
+  gap: 0;
+  background: black;
+}
+
+#home-page .page-content {
+  grid-row: center / bottom;
+  grid-column: center / right;
+
+  font-size: 24px;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 @media (max-width: 768px) {
@@ -48,3 +62,56 @@
   text-align: center;
   color: var(--primary);
 }
+
+
+#home-page .weed-border-top-left {
+  grid-row: top;
+  grid-column: left;
+}
+
+#home-page .weed-border-top-right {
+  grid-row: top;
+  grid-column: right;
+  background: url("img/logo_left.png");
+  transform: rotate(180deg) scaleY(-1);
+}
+
+#home-page .weed-border-left {
+  grid-row: span;
+  grid-column: left;
+  background: url("img/logo_leftt.png");
+}
+
+#home-page .weed-border-right {
+  grid-column: right;
+  background: url("img/logo_leftt.png");
+  transform: rotate(180deg);
+}
+
+#home-page .weed-border-top-center {
+  grid-row: top / center;
+  grid-column: center / right;
+  background: url("img/logo_top.png");
+}
+
+#home-page .weed-border-bottom-center {
+  grid-column: center;
+  grid-row: bottom;
+  background: url("img/logo_top.png");
+  transform: scaleY(-1);
+}
+
+#home-page .weed-border-right-bottom {
+  grid-row: bottom;
+  grid-column: right;
+  background: url("img/logo_left.png");
+  transform: rotate(180deg);
+}
+
+#home-page .weed-border-left-bottom {
+  grid-row: bottom;
+  grid-column: left;
+  background: url("img/logo_left.png");
+  transform: scaleY(-1);
+}
+
